--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -123,9 +123,9 @@
 								<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 									<div class="panel-body">
 										<input type="checkbox" id="a11" name="dealSttsCd" value="TP" class="searchOption" onclick="dealSearch()"/>
-                                        <label for="a11"><span></span>진행 중인 거래</label><br/>
+                                        <label for="a11"><span></span>판매중</label><br/>
                                         <input type="checkbox" id="a22" name="dealSttsCd" value="TC" class="searchOption" onclick="dealSearch()"/>
-                                        <label for="a22"><span></span>종료된 거래</label><br/>
+                                        <label for="a22"><span></span>판매 종료</label><br/>
                                         <input type="checkbox" id="a33" name="dealTypCd" value="A" class="searchOption" onclick="dealSearch()"/>
                                         <label for="a33"><span></span>경매</label><br/>
                                         <input type="checkbox" id="a44" name="dealTypCd" value="S" class="searchOption" onclick="dealSearch()"/>
@@ -298,9 +298,9 @@
 												</div>
 												<div class="drop-body">
                                                     <input type="checkbox" id="p1" name="dealSttsCd" value="TP" class="searchOption"/>
-													<label for="p1"><span></span>진행 중인 거래</label><br/>
+													<label for="p1"><span></span>판매중</label><br/>
                                                     <input type="checkbox" id="p2" name="dealSttsCd" value="TC" class="searchOption"/>
-													<label for="p2"><span></span>종료된 거래</label><br/>
+													<label for="p2"><span></span>판매 종료</label><br/>
                                                     <input type="checkbox" id="p3" name="dealTypCd" value="A" class="searchOption"/>
 													<label for="p3"><span></span>경매</label><br/>
                                                     <input type="checkbox" id="p4" name="dealTypCd" value="S" class="searchOption"/>
@@ -470,11 +470,11 @@
 						<div class="drop-body">
 							<div class="db-div">
                                 <input type="checkbox" id="z1" name="dealSttsCd" value="TP" class="searchOption"/>
-								<label for="z1"><span></span>진행 중인 거래</label>
+								<label for="z1"><span></span>판매중</label>
 							</div>
 							<div class="db-div">
                                 <input type="checkbox" id="z2" name="dealSttsCd" value="TC" class="searchOption"/>
-								<label for="z2"><span></span>종료된 거래</label>
+								<label for="z2"><span></span>판매 종료</label>
 							</div>
 							<div class="db-div">
                                 <input type="checkbox" id="z3" name="dealTypCd" value="A" class="searchOption"/>
