--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -204,6 +204,7 @@
 											<input type="file" id="workImgFrtUrl" class="upload-hidden" th:value="${result.workImgFrtUrl}"> 
 										</div>
 										<p class="table-p">
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
 											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -220,6 +221,7 @@
 											<input type="file" id="workImgRerUrl" class="upload-hidden" th:value="${result.workImgRerUrl}"> 
 										</div>
 										<p class="table-p">
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
 											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -333,7 +335,7 @@
 									<td>
 										<input type="text" class="input-4" id="workState" th:value="${result.workState}"/>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 내용을 입력해주세요.  <br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 내용을 입력해주세요.<br/>
 										</p>
 									</td>
 								</tr>
@@ -353,7 +355,11 @@
 											<label for="workImgLefUrl">찾아보기</label> 
 											<input type="file" id="workImgLefUrl" class="upload-hidden" th:value="${result.workImgLefUrl}"> 
 										</div>
-										<p class="table-p">※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.</p>
+										<p class="table-p">
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
+											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
+											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 									</td>
 								</tr>
 								<tr>
@@ -367,7 +373,8 @@
 											<input type="file" id="workImgRitUrl" class="upload-hidden" th:value="${result.workImgRitUrl}"> 
 										</div>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
 											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -384,7 +391,8 @@
 											<input type="file" id="workImgTopUrl" class="upload-hidden" th:value="${result.workImgTopUrl}"> 
 										</div>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
 											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -401,7 +409,8 @@
 											<input type="file" id="workImgBotUrl" class="upload-hidden" th:value="${result.workImgBotUrl}"> 
 										</div>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
 											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
