--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_reg.html
@@ -184,6 +184,7 @@
 											<input type="file" id="workMainImgUrl" class="upload-hidden"> 
 										</div>
 										<p class="table-p">
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
 											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -198,6 +199,7 @@
 											<input type="file" id="workImgFrtUrl" class="upload-hidden"> 
 										</div>
 										<p class="table-p">
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
 											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -212,6 +214,7 @@
 											<input type="file" id="workImgRerUrl" class="upload-hidden"> 
 										</div>
 										<p class="table-p">
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
 											※ 작품이 꽉 차게 나온 대표 사진 입니다. 관리자가 배경을 제거하고 다시 등록할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -343,7 +346,8 @@
 											<input type="file" id="workImgLefUrl" class="upload-hidden"> 
 										</div>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
 											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -358,7 +362,8 @@
 											<input type="file" id="workImgRitUrl" class="upload-hidden" required> 
 										</div>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
 											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -373,7 +378,8 @@
 											<input type="file" id="workImgTopUrl" class="upload-hidden"> 
 										</div>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
 											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
@@ -388,7 +394,8 @@
 											<input type="file" id="workImgBotUrl" class="upload-hidden"> 
 										</div>
 										<p class="table-p">
-											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요. (최대5장)<br/>
+											※ 작품 사진은 정방형 이미지를 권장합니다.<br/>
+											※ 작품의 질감, 액자의 파손, 크랙, 찢어짐 등 작품 상태와 관련된 사진을 등록해 주세요.<br/>
 											※ 배송 완료 시점에 사진과 다른 경우 구매자는 수취를 거부할 수 있습니다.<br/>
 											※ 파일 확장자는 jpg, jpeg로 용량은 5MB 미만으로 등록해주세요.
 										</p>
