--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -464,9 +464,8 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt1()">영수증</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래명세서</a>
-											<!-- <a href="javascript:fnModalAlert();" class="btns-3">현금영수증</a> -->
-											<a href="javascript:fnModalAlert();" class="btns-3">거래계약서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a>
 										</div>
 									</div>
 								</div>
@@ -519,9 +518,10 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt2()">영수증</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래명세서</a>
-											<!-- <a href="javascript:fnModalAlert();" class="btns-3">현금영수증</a> -->
-											<a href="javascript:fnModalAlert();" class="btns-3">거래계약서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 확인서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">컨디션 체크</a>
 										</div>
 									</div>
 								</div>
