--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -323,9 +323,8 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래명세서</a>
-											<!-- <a href="javascript:fnModalAlert();" class="btns-3">현금영수증</a> -->
-											<a href="javascript:fnModalAlert();" class="btns-3">거래계약서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a>
 										</div>
 									</div>
 								</div>
@@ -374,9 +373,10 @@
 										
 										<div class="mbtn-box">
 											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
-											<a href="javascript:fnModalAlert();" class="btns-3">거래명세서</a>
-											<!-- <a href="javascript:fnModalAlert();" class="btns-3">현금영수증</a> -->
-											<a href="javascript:fnModalAlert();" class="btns-3">거래계약서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 명세서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 계약서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">거래 확인서</a>
+											<a href="javascript:fnModalAlert();" class="btns-3">컨디션 체크</a>
 										</div>
 									</div>
 								</div>
